# API-OCR-TGP

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  SETUP.md  docker-compose.yml  ocr_proceso.py  pyproject.toml
app/: main.py  schemas.py
app/api/v1/: router.py
app/api/v1/endpoints/: ocr.py
app/api/v1/services/: ocr_helpers.py
app/core/: config.py  di.py
app/models/: __init__.py
app/services/: ocr_service.py
src/: main.py  models.py  ocr_service.py
