[project]
name = "paddle-ocr-api"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]",
    "python-multipart",
    "paddlepaddle==3.2.2",
    "paddleocr>=3.3.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple/"
name = "pypi"
default = true

[[tool.uv.index]]
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu/"
name = "paddlepaddle"
